* Moved layer opacity slider to active layers dropdown. * Changed basemap dropdown to a button to reduce size and it can no longer disappear off the bottom of the panel. * Removed layer visibility button from active layers dropdown to reduce clutter and functionality can be achieved with opacity slider. * Reduced width of active layer dropdown slightly when not opened.

--- a/src/app/layout/datasets/datasets-display.component.scss
+++ b/src/app/layout/datasets/datasets-display.component.scss
@@ -31,17 +31,3 @@ label {
   height: 24px;
   line-height: 24px;
 }
-
-// Remove opacity Dropdown arrow
-.dropdown-toggle::after {
-  display:none;
-}
-
-.dropdown-menu {
-  min-width: 25px;
-}
-
-p-slider {
-  display: flex;
-  justify-content: center;
-}
